# ha-octopus-spain

./: .pre-commit-config.yaml  README.md  hacs.json  pyproject.toml
.github/workflows/: create-release-pr.yml  create-release.yml  tests.yml  validate-release-pr.yml
custom_components/octopus_spain/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  statistics.py
custom_components/octopus_spain/lib/: octopus_spain.py
custom_components/octopus_spain/translations/: en.json  es.json
tests/: conftest.py  test_lib.py  test_sensor.py  test_sensor_lastday.py  test_statistics.py
