[project]
name = "ha-octopus-spain"
version = "1.3.0"
description = "Componente para Home Assistant que muestra los datos de consumo y facturación de Octopus Energy España"
authors = [
    { name = "Miguel Ángel López", email = "miguel.angel.lopez.vicente@gmail.com" }
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/miguelangellv/ha-octopus-spain"
requires-python = ">=3.13.2"
dependencies = [
    "homeassistant>=2025.10.0",
    "python-graphql-client==0.4.3",
    "tariff-td==1.1",
    "voluptuous>=0.15.2",
]

[project.urls]
Homepage = "https://github.com/miguelangel_lv/ha-octopus-spain/"
Changelog = "https://github.com/miguelangel_lv/ha-octopus-spain/releases"
Issues = "https://github.com/miguelangel_lv/ha-octopus-spain/issues"
Repository = "https://github.com/miguelangel_lv/ha-octopus-spain"


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]

[tool.ruff.lint]
ignore = [
  "A005", # It is just wrong
  "ANN401", # Opiniated warning on disallowing dynamically typed expressions
  "D203", # Conflicts with other rules
  "D213", # Conflicts with other rules
  "RUF012", # Just broken
  "TID252", # Relative imports

  # Formatter conflicts
  "COM812",
  "COM819",
  "D206",
  "E501",
  "ISC001",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "W191",
]

[tool.hatch.build.targets.wheel]
packages = ["custom_components/octopus_spain"]

[tool.ruff]
line-length = 140
src = ["custom_components/octopus_spain"]

[tool.pylint.MAIN]
init-hook = "import sys; sys.path.append('custom_components')"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 140

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
"homeassistant.helpers.area_registry" = "ar"
"homeassistant.helpers.config_validation" = "cv"
"homeassistant.helpers.device_registry" = "dr"
"homeassistant.helpers.entity_registry" = "er"
"homeassistant.helpers.issue_registry" = "ir"
voluptuous = "vol"

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = [
    "homeassistant",
]
combine-as-imports = true

[dependency-groups]
dev = [
    "pre-commit>=3.6.0",
    "pre-commit-hooks>=4.5.0",
    "pylint>=3.1.0",
    "ruff>=0.3.2",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-homeassistant-custom-component>=0.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
